task #154: delete types
